# domainlantern

./: LICENSE  README.md
domain-lantern/: CHANGELOG.md  LICENSE  README.md  RUN.cmd  SECURITY.md  install.cmd  lantern.ps1  pyproject.toml  requirements.txt
domain-lantern/src/domain_lantern/: __init__.py  __main__.py  cli.py
domain-lantern/src/domain_lantern.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
domain-lantern/tests/: test_cli.py
