[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-lantern"
version = "2.0.2"
description = "Passive OSINT CLI for domain checks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Domain Lantern Contributors" }
]
keywords = ["osint", "dns", "whois", "security.txt", "robots.txt", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Internet :: Name Service (DNS)",
]
dependencies = [
  "rich>=13.7.0",
  "dnspython>=2.6.1",
  "python-whois>=0.9.4",
  "requests>=2.32.0",
]

[project.scripts]
domain-lantern = "domain_lantern.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
